Add initial RFC2780 IP Version lookup support
Add support for https://www.iana.org/assignments/version-numbers/version-numbers.xhtml IP Version lookups.

Change-Id: I58a330ab9acba17356344df3ffeb94cc1b2b1443

--- a/epan/Makefile.am
+++ b/epan/Makefile.am
@@ -90,6 +90,7 @@ LIBWIRESHARK_SRC = \
 	in_cksum.c		\
 	ipproto.c		\
 	ipv4.c			\
+	ip_version.c	\
 	media_params.c		\
 	next_tvb.c		\
 	oids.c			\
@@ -234,6 +235,7 @@ LIBWIRESHARK_INCLUDES = \
 	iax2_codec_type.h	\
 	in_cksum.h		\
 	ip_opts.h		\
+	ip_version.h	\
 	ipproto.h		\
 	ipv4.h			\
 	ipv6.h			\
